# clubmanager2

./: .gitignore  README.md  celery-beat.service  celery.service  clubmanager-update-scores.service  clubmanager-update-scores.timer  clubmanager.service  manage.py  pyproject.toml  pytest.ini  start-server.sh  tailwind.config.js
.github/: dependabot.yml
activities/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  rules.py  serializers.py  signals.py  tests.py  urls.py  urls_admin.py  views_admin.py
activities/competition/: base.py  hockey.py
activities/migrations/: 0001_initial.py  0002_alter_opponent_options_game.py  0003_game_season.py  0004_alter_game_options_alter_game_season.py  0005_competition_game_competition.py  0006_game_live_game_score_opponent_game_score_team.py  0007_game_game_id.py  0008_auto_20240907_2231.py  0009_auto_20240908_1524.py  0010_alter_game_game_id.py  0011_alter_game_score_opponent_alter_game_score_team.py  0012_game_friendly_game.py  0013_gametype_remove_game_friendly_game_and_more.py  0014_auto_20240923_2219.py  0015_game_game_type.py  0016_gametype_opponent_count.py  0017_alter_game_competition_alter_game_location.py  0018_delete_competition.py  0019_alter_gametype_opponent_count.py  0020_alter_game_competition.py  0021_alter_game_competition_alter_game_game_id.py
activities/views/: admin.py
api/: api.py
clubmanager/: __init__.py  api.py  asgi.py  celery.py  clubmanager_admin_urls.py  clubmanager_urls.py  settings.py  urls.py  views.py  wsgi.py
clubmanager/templatetags/: __init__.py  avatar.py
finance/: admin.py  filters.py  forms.py  models.py  rules.py  serializers.py  urls.py  urls_admin.py  views.py  views_admin.py  views_admin_old.py
finance/migrations/: 0001_initial.py  0002_sponsor_logo_sponsor_url.py  0003_sponsor_start_date.py  0004_sponsor_end_date.py  0005_alter_sponsor_options.py  0006_invoice_material_lineitem.py  0007_rename_invoice_order_alter_material_options_and_more.py  0008_lineitem_number.py  0009_alter_lineitem_options_alter_lineitem_number.py  0010_alter_lineitem_number.py  0011_alter_lineitem_number.py  0012_remove_material_role_remove_material_team_and_more.py  0013_item.py  0014_orderform_order_orderformitem_lineitem_delete_item.py  0015_alter_orderformitem_unit_price_type.py  0016_alter_orderformitem_description_alter_sponsor_url.py
finance/views/: admin.py
frontend/: admin.py  api.py  models.py  rules.py  urls.py  urls_admin.py  views.py  views_admin.py
frontend/migrations/: 0002_sponsor_logo_sponsor_url.py  0003_sponsor_start_date.py  0004_sponsor_end_date.py  0005_alter_sponsor_options.py
members/: admin.py  apps.py  filters.py  forms.py  models.py  rules.py  signals.py  tests.py  urls_admin.py  views_admin.py
members/migrations/: 0001_initial.py  0002_alter_member_options_member_notes.py  0003_member_birth_date_member_license_member_phone.py  0004_member_created_member_modified.py  0005_alter_member_options_member_emergency_phone_primary_and_more.py  0006_alter_member_license.py  0007_member_password_change_required.py  0008_alter_family_options_family_members_family_name.py  0009_family_created_family_modified.py  0010_member_is_organisation_admin.py  0011_rename_is_organisation_admin_member_is_organization_admin.py  0012_rename_birth_date_member_birthday.py  0013_alter_member_birthday.py  0014_alter_member_emergency_phone_primary.py  0015_remove_family_name.py  0016_alter_member_license.py  0017_alter_member_license.py  0018_member_children.py  0019_alter_member_children.py  (+14 more)
news/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  rules.py  serializers.py  signals.py  urls_admin.py  utilities.py  views_admin.py
teams/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  rules.py  serializers.py  signals.py  tasks.py  urls_admin.py  views_admin.py
templates/: _base.html  base.html  base_admin.html  base_user.html
(+110 files in other folders)
