[tool.poetry]
name = "clubmanager"
version = "0.4.0"
description = "Club Management software"
authors = ["Bernard Siebens <bernard@siebens.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
django-auditlog = "^3.0.0"
django-compressor = "^4.5.1"
django-initials-avatar = "^0.0.7"
django-extensions = "^3.2.3"
django-filter = "^24.3"
django-debug-toolbar = "^4.4.6"
rules = "^3.5"
django-markdownx = "^4.0.7"
django-cleanup = "^9.0.0"
python-dateutil = "^2.9.0"
django-cors-headers = "^4.4.0"
beautifulsoup4 = "^4.12.3"
django-model-utils = "^5.0.0"
django-two-factor-auth = {extras = ["webauthn"], version = "^1.17.0"}
django-environ = "^0.11.2"
pillow = "^10.4.0"
gunicorn = "^23.0.0"
requests = "^2.32.3"
djangorestframework = "^3.15.2"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8-django = "^1.4"
pytest = "^8.3.3"
coverage = "^7.6.1"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
